Add non-directed weighted graph

--- a/Hmt.Common.DataStructures.UnitTests/Hmt.Common.DataStructures.UnitTests.csproj
+++ b/Hmt.Common.DataStructures.UnitTests/Hmt.Common.DataStructures.UnitTests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -10,8 +10,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentAssertions" Version="6.10.0" />
-    <PackageReference Include="Marten" Version="6.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
     <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.3.0" />
@@ -20,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Hmt.Common.DataAccess\Hmt.Common.DataAccess.csproj" />
+    <ProjectReference Include="..\Hmt.Common.DataStructures\Hmt.Common.DataStructures.csproj" />
   </ItemGroup>
 
 </Project>
