--- a/Hmt.Common.Gaming/Hmt.Common.Gaming.csproj
+++ b/Hmt.Common.Gaming/Hmt.Common.Gaming.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Views\PlayViews\" />
+    <Compile Remove="Views\**" />
+    <EmbeddedResource Remove="Views\**" />
+    <None Remove="Views\**" />
   </ItemGroup>
 
   <ItemGroup>
